# MOH

./: .env.processing  .gitignore  add_bg.mjs  add_circle_bg.mjs  check_db.rs  check_excel.cjs  commands_backup.txt  create_rtf.mjs  index.html  package-lock.json  package.json  tailwind.config.js  test_titles.cjs  tsconfig.tsbuildinfo  vite.config.ts  write_bom.mjs  تفاصيل.txt
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build_error.txt  fix.py  inspect_db.rs  license.rtf  license.txt  tauri.conf.json  tauri.processing.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/data/: Administrative_tab.xlsx  job_titles.xlsx
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs
src-tauri/src/core/: aggregator.rs  cleaner.rs  duplicate.rs  fuzzy.rs  mod.rs  models.rs  validator.rs
src-tauri/src/database/: employee_importer.rs  employee_queries.rs  exporter.rs  importer.rs  mod.rs  queries.rs  setup.rs
src-tauri/src/security/: license.rs
src/components/: BackdoorModal.tsx  ColumnAlignmentModal.tsx  ConflictResolution.tsx  DatasetEditorModal.tsx  DuplicateCheckerCard.tsx  EmployeeDetailsModal.tsx  FileUploadZone.tsx  SearchableCombobox.tsx  SortCard.tsx  TitleValidatorCard.tsx
src/hooks/: useLicense.ts
src/views/: AnalyticsDashboard.tsx  DataCenter.tsx  DatabaseManager.tsx  EmployeeManager.tsx  Home.tsx
