[package]
name = "moh_auth_desktop_v2"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
calamine = "0.26"
rust_xlsxwriter = "0.82"
regex = "1.11"
duckdb = { version = "1.1" }
lazy_static = "1.5"
aes-gcm = "0.10"
sha2 = "0.10"
anyhow = "1.0"
thiserror = "2.0"
tauri-plugin-dialog = "2.7.1"
chrono = "0.4"
quick-xml = "0.31"
zip = "0.6"
sysinfo = "0.39.3"
windows-sys = { version = "0.61.2", features = ["Win32_System_Diagnostics_Debug", "Win32_Foundation"] }
pbkdf2 = "0.11.0"
hmac = "0.12"

[target.'cfg(windows)'.dependencies]
wmi = "0.14"
